overflow-fix on blogpost__content

--- a/src/components/BlogPost/BlogPost.sass
+++ b/src/components/BlogPost/BlogPost.sass
@@ -22,7 +22,7 @@
     grid-area: content
 
     max-width: 100%
-    overflow: hidden
+    overflow-x: hidden
 
   &__toc
     grid-area: toc
